kustomizations/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sirius-gateway
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: dualstack-proxy-config
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.siriusbot.f5.si"
      name: http-wildcard
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "siriusbot.f5.si"
      name: http-apex
      port: 80
      protocol: HTTP
