kustomizations/base/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/oruger-0730/sirius-web:1.0.23
          resources:
            requests:
              cpu: 500m # 必要最低限の0.5CPUを確保
              memory: 64Mi # 必要最低限の64MiBを確保
            limits:
              cpu: 1000m # 最大1CPUまで使用可能
              memory: 512Mi # 最大128MiBまで使用可能
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route
spec:
  parentRefs:
    - name: sirius-gateway
  hostnames:
    - "siriusbot.f5.si"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web
          port: 3000
          kind: Service
          group: ""
